--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,15 +2,65 @@
 
 <html>
     <head>
+        <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+        <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+        <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+        <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
         <title>#{get 'title' /}</title>
         <meta charset="${_response_encoding}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" media="screen" href="@{'/public/css/main.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/css/normalize.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/plugin/bootstrap/css/bootstrap.min.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/plugin/bootstrap/css/bootstrap-responsive.min.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/plugin/font-awesome/css/font-awesome.min.css'}">
+        <!--[if IE 7]>
+            <link rel="stylesheet" href="@{'/public/plugin/font-awesome/css/font-awesome-ie7.min.css'}">
+        <![endif]-->
         #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+
+        <link rel="shortcut icon" type="image/png" href="@{'/public/image/favicon.png'}">
+        <script src="@{'/public/js/jquery-1.9.1.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/js/modernizr-2.6.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/js/main.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="@{'/public/js/plugins.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         #{get 'moreScripts' /}
+
+    
+
+            
+
     </head>
     <body>
         #{doLayout /}
+        <footer>
+            <div class="row-fluid footer">
+                <div class="span12">
+                    <p class="copyright text-right"><small>all rights reserved © 2014</small></p>
+                </div>
+            </div>
+            <!--==========================================================================
+                 Javascript Unit
+                            -connect your Google Analytics account easily.
+                ==========================================================================-->
+                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+                    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+                    <script src="js/plugins.js"></script>
+                            <script src="plugin/bootstrap/js/bootstrap.min.js"></script>
+                    <script src="js/main.js"></script>
+
+                    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+            <!--
+                    <script>
+                        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+                        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+                        g.src='//www.google-analytics.com/ga.js';
+                        s.parentNode.insertBefore(g,s)}(document,'script'));
+                    </script>
+            -->
+        </footer>
     </body>
+
+    
 </html>
